Memperbarui Tugas Slicing Web

--- a/history.html
+++ b/history.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <!-- Navbar -->
+    <section class="navigation">
     <nav class="navbar">
       <div class="container-fluid">
         <div class="row">
@@ -50,9 +51,11 @@
         </div>
       </div>
     </nav>
+  </section>
     <!-- End Navbar -->
 
-    <!-- Side Nav -->
+    <!-- Main Content -->
+    <section class="hero-content">
     <div class="container-fluid">
       <div class="row">
         <div class="col-2 col-md-1 side-nav flex-column">
@@ -166,10 +169,11 @@
         </div>
       </div>
     </div>
-
-    <!-- Side Nav -->
+    </section>
+    <!-- End Hero Content -->
 
     <!-- Modal Add-->
+    <section class="add-modal">
     <div
       class="modal fade"
       id="exampleModal"
@@ -228,6 +232,7 @@
         </div>
       </div>
     </div>
+    </section>
     <!-- End Modal Add-->
 
     <!-- Optional JavaScript -->
