--- a/index.html
+++ b/index.html
@@ -22,203 +22,263 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 col-md-8 col-sm-12 food-items">
-            <div class="nav-detail">
-              <div class="row">
-                <div class="col-1 col-md-1 burger-menu">
-                  <a href="./index.html">
-                    <img src="./img/icon/menu.png" alt="" />
-                  </a>
-                  <!-- <div class="nav flex-column side-nav">
+    <section class="navigation">
+      <nav class="navbar">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 col-md-8 col-sm-12 food-items">
+              <div class="nav-detail">
+                <div class="row">
+                  <div class="col-1 col-md-1 burger-menu">
+                    <a href="./index.html">
+                      <img src="./img/icon/menu.png" alt="" />
+                    </a>
+                    <!-- <div class="nav flex-column side-nav">
                     <img src="./img/icon/fork.png" alt="" />
                     <img src="./img/icon/clipboard.png" alt="" />
                     <img src="./img/icon/add.png" alt="" />
                   </div> -->
-                </div>
-                <div class="col-9 col-md-7">
-                  <h2 class="text-center">Food Items</h2>
-                </div>
-                <div class="col-1 col-md-1">
-                  <img src="./img/icon/search.png" alt="" />
+                  </div>
+                  <div class="col-9 col-md-7">
+                    <h2 class="text-center">Food Items</h2>
+                  </div>
+                  <div class="col-1 col-md-1">
+                    <img src="./img/icon/search.png" alt="" />
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-12 col-md-4 col-sm-12 side-cart">
-            <div class="cart">
-              <h4 class="text-center">Cart</h4>
-              <div class="eclipse text-center">0</div>
+            <div class="col-12 col-md-4 col-sm-12 side-cart">
+              <div class="cart">
+                <h4 class="text-center">Cart</h4>
+                <div class="eclipse text-center">0</div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </section>
     <!-- End Navbar -->
 
-    <!-- Side Nav -->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-2 col-md-1 side-nav flex-column">
-          <div class="detail-sidenav">
-            <nav class="nav flex-column">
-              <a class="nav-link" href="./home-select.html">
-                <img src="./img/icon/fork.png" alt="" />
-              </a>
-              <a class="nav-link" href="./history.html">
-                <img src="./img/icon/clipboard.png" alt="" />
-              </a>
-              <a
-                class="nav-link"
-                href="#"
-                data-toggle="modal"
-                data-target="#exampleModal"
+    <!-- Main Content -->
+    <section class="hero-content">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-2 col-md-1 side-nav flex-column">
+            <div class="detail-sidenav">
+              <nav class="nav flex-column">
+                <a class="nav-link" href="./home-select.html">
+                  <img src="./img/icon/fork.png" alt="" />
+                </a>
+                <a class="nav-link" href="./history.html">
+                  <img src="./img/icon/clipboard.png" alt="" />
+                </a>
+                <a
+                  class="nav-link"
+                  href="#"
+                  data-toggle="modal"
+                  data-target="#exampleModal"
+                >
+                  <img src="./img/icon/add.png" alt="" />
+                </a>
+              </nav>
+            </div>
+          </div>
+          <div class="col-10 col-md-7 main-content">
+            <div class="row">
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
               >
-                <img src="./img/icon/add.png" alt="" />
-              </a>
-            </nav>
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/1_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Espresso</p>
+                  <h3>Rp. 10.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/2_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Cofeee Latte</p>
+                  <h3>Rp. 15.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/3_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Cappucino</p>
+                  <h3>Rp. 5.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/4_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Red Velvet Latte</p>
+                  <h3>Rp. 33.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/5_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Choco Rhum</p>
+                  <h3>Rp. 28.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/6_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Black Forest</p>
+                  <h3>Rp. 30.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/7_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Chicken Katsu Dabu-dabu</p>
+                  <h3>Rp. 60.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/8_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Salmon Truffle Teriyaki</p>
+                  <h3>Rp. 60.000</h3>
+                </div>
+              </div>
+              <div
+                class="col-12 col-md-4 col-sm-6 d-flex justify-content-center"
+              >
+                <div class="main-food">
+                  <img
+                    src="./img/food-menu/9_min.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <p>Wiener Schnitzel</p>
+                  <h3>Rp. 69.000</h3>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-10 col-md-7 main-content">
-          <div class="row">
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/1_min.jpg" alt="" class="img-fluid" />
-                <p>Espresso</p>
-                <h3>Rp. 10.000</h3>
-              </div>
+          <div class="col-12 col-md-4 text-center">
+            <div class="main-cart">
+              <img src="./img/icon/food-and-restorant.png" alt="" width="200" />
+              <h4 class="text-center">Your cart is empty</h4>
+              <p>Please add some items from the menu</p>
             </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/2_min.jpg" alt="" class="img-fluid" />
-                <p>Cofeee Latte</p>
-                <h3>Rp. 15.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/3_min.jpg" alt="" class="img-fluid" />
-                <p>Cappucino</p>
-                <h3>Rp. 5.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/4_min.jpg" alt="" class="img-fluid" />
-                <p>Red Velvet Latte</p>
-                <h3>Rp. 33.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/5_min.jpg" alt="" class="img-fluid" />
-                <p>Choco Rhum</p>
-                <h3>Rp. 28.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/6_min.jpg" alt="" class="img-fluid" />
-                <p>Black Forest</p>
-                <h3>Rp. 30.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/7_min.jpg" alt="" class="img-fluid" />
-                <p>Chicken Katsu Dabu-dabu</p>
-                <h3>Rp. 60.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/8_min.jpg" alt="" class="img-fluid" />
-                <p>Salmon Truffle Teriyaki</p>
-                <h3>Rp. 60.000</h3>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center">
-              <div class="main-food">
-                <img src="./img/food-menu/9_min.jpg" alt="" class="img-fluid" />
-                <p>Wiener Schnitzel</p>
-                <h3>Rp. 69.000</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4 text-center">
-          <div class="main-cart">
-            <img src="./img/icon/food-and-restorant.png" alt="" width="200" />
-            <h4 class="text-center">Your cart is empty</h4>
-            <p>Please add some items from the menu</p>
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- Side Nav -->
+    </section>
+    <!-- End Main Content -->
 
     <!-- Modal Add-->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Add Item</h5>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Name</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" />
+    <section class="add-modal">
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Add Item</h5>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Name</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" />
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Image</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" />
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Image</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" />
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Price</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control price" id="price" />
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Price</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control price" id="price" />
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Category</label>
-                <div class="col-sm-10">
-                  <select id="inputState" class="form-control">
-                    <option selected>Category</option>
-                    <option>Category 1</option>
-                    <option>Category 2</option>
-                    <option>Category 3</option>
-                  </select>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Category</label>
+                  <div class="col-sm-10">
+                    <select id="inputState" class="form-control">
+                      <option selected>Category</option>
+                      <option>Category 1</option>
+                      <option>Category 2</option>
+                      <option>Category 3</option>
+                    </select>
+                  </div>
                 </div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary btn-cancel"
-              data-dismiss="modal"
-            >
-              Cancel
-            </button>
-            <button type="button" class="btn btn-primary btn-add">Add</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary btn-cancel"
+                data-dismiss="modal"
+              >
+                Cancel
+              </button>
+              <button type="button" class="btn btn-primary btn-add">Add</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
     <!-- End Modal Add-->
 
     <!-- Optional JavaScript -->
